# Ripple-V1

./: .dockerignore  .gitignore  .mcp.json  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
benchmarks/results/: flask-c8.json  flask-search-c1.json  flask-search-c16.json  flask-search-c4.json  flask-search-c8.json
deploy/huggingface/: README.md
docs/: DEPLOY.md
src/ripple/: __init__.py  bench.py  cli.py  config.py  mcp_server.py
src/ripple/api/: __init__.py  app.py  cache.py  tracing.py
src/ripple/api/static/: index.html
src/ripple/db/: __init__.py  models.py  repository.py  session.py
src/ripple/embeddings/: __init__.py  embedder.py  vector_index.py
src/ripple/eval/: __init__.py  impact_eval.py  metrics.py  semantic_eval.py
src/ripple/graph/: __init__.py  builder.py  models.py  resolver.py
src/ripple/indexing/: __init__.py  incremental.py  indexer.py
src/ripple/mining/: __init__.py  git_miner.py  negatives.py  pairs.py
src/ripple/parsing/: __init__.py  models.py  parser.py
src/ripple/retrieval/: __init__.py  backend.py  pipeline.py  reranker.py
src/ripple/training/: __init__.py  train.py
tests/: test_api.py  test_bench.py  test_cli.py  test_db.py  test_embeddings.py  test_eval.py  test_graph.py  test_incremental.py  test_indexing.py  test_mcp.py  test_parsing.py  test_reranker.py  test_semantic_eval.py
