[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ripple"
version = "0.1.0"
description = "A hybrid graph + semantic code-intelligence engine for Python codebases."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Jamie Wang" }]
dependencies = [
    "typer>=0.12,<0.16",
    "pydantic-settings>=2.2,<3",
    "rich>=13,<15",
    "networkx>=3.2,<4",
    "gitpython>=3.1,<4",
    "numpy>=1.26,<3",
    "sentence-transformers>=2.7,<6",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.1,<4",
    "pgvector>=0.3,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "redis>=5,<7",
    "greenlet>=3,<4",
    "opentelemetry-api>=1.25,<2",
    "opentelemetry-sdk>=1.25,<2",
    "mcp>=1.2,<2",
]

# Heavier deps are added per milestone, not up front:
#   M3 semantic search  -> sentence-transformers, torch
#   M4 storage          -> sqlalchemy, psycopg, pgvector
#   M5 mining/ML        -> gitpython, rank-bm25
#   M6 service          -> fastapi, uvicorn, redis
[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<0.13",
    "black>=24,<26",
    "mypy>=1.11,<2",
    "types-networkx>=3.2,<4",
    "httpx>=0.27,<1",
    "pytest-asyncio>=0.23,<2",
]

[project.scripts]
ripple = "ripple.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ripple"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Typer relies on calls (typer.Argument/Option) as parameter defaults — not a bug.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["sentence_transformers.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
